Generate jdeps summary after all modular jars are built